tests/fail/block_naked_destructure.stderr
tests/fail/block_naked_destructure.tk:7:11: error[E0461]: Illegal use of permission suffixes (# or $) in everyday contexts. Modifiers are strictly limited to declarations or explicit mutable method calls.
tests/fail/block_naked_destructure.tk:8:17: error[E0554]: Naked destructuring of resource 'String' is strictly forbidden to prevent silent copies and double-frees. You must use an explicit borrow '&' (e.g., '&msg')
tests/fail/block_naked_destructure.tk:11:18: error[E0554]: Naked destructuring of resource 'String' is strictly forbidden to prevent silent copies and double-frees. You must use an explicit borrow '&' (e.g., '&e')
